[gd_scene load_steps=7 format=3 uid="uid://cty4twpy767ye"]

[ext_resource type="Texture2D" uid="uid://4qfb2qkko076" path="res://assets/net.png" id="1_es2g2"]
[ext_resource type="Script" uid="uid://dqg5yrhphqxfr" path="res://scenes/net.gd" id="1_i41qj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_es2g2"]
size = Vector2(319, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h6vps"]
size = Vector2(316, 111)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i41qj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h6vps"]
bg_color = Color(0.50980395, 1, 0.72156864, 1)

[node name="Net" type="Node2D"]
script = ExtResource("1_i41qj")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
scale = Vector2(2.5, 2.5)
texture = ExtResource("1_es2g2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_es2g2")
disabled = true

[node name="FilterArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="FilterArea"]
position = Vector2(1, -37)
shape = SubResource("RectangleShape2D_h6vps")

[node name="FilterRate" type="Timer" parent="."]
wait_time = 1.5

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -41.0
offset_top = 21.0
offset_right = 41.0
offset_bottom = 30.0
theme_override_styles/background = SubResource("StyleBoxFlat_i41qj")
theme_override_styles/fill = SubResource("StyleBoxFlat_h6vps")
max_value = 20.0
show_percentage = false

[connection signal="body_entered" from="FilterArea" to="." method="_on_filter_area_body_entered"]
[connection signal="body_exited" from="FilterArea" to="." method="_on_filter_area_body_exited"]
[connection signal="timeout" from="FilterRate" to="." method="_on_filter_rate_timeout"]
